# revenue-intel-mcp

./: .gitignore  README.md  config.py  data_store.py  demo.py  example_usage.py  mock_data.py  models.py  pyproject.toml  scoring.py  server.py
tests/: __init__.py  test_scoring.py  test_tools.py
